package com.payroll.webserver;

/**
 * Абстракція контексту HTTP: об'єднує лише методи відповіді, які реально використовуються.
 */
public interface HttpContext extends Response {
}
